# codex-control-plane-mcp

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.ru.md  SECURITY.md  pyproject.toml  run.cmd  run.ps1  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
codex_control_plane_mcp/: __init__.py  __main__.py  admin.py  hook_installer.py  server.py  worker.py
codex_control_plane_mcp/hooks/: __init__.py  codex_sqlite_journal.py
docs/: API_CONTRACT.md  EXTERNAL_MCP_CLIENT.md  OPENCLAW_CLIENT_GUIDE.md  OPENCLAW_CLIENT_GUIDE_RU.md  PUBLICATION_GUIDE.md  RELEASE_CHECKLIST.md  THIN_WRAPPERS.md
examples/: codex-control-plane-mcp.config.json  mcp-client-configs.md  safe-live-smoke-prompt.txt
openclaw_codex_mcp/: __init__.py  active_work.py  admin.py  agent_contract.py  agent_guidance.py  agent_safe_redactor.py  catalog.py  chat_service.py  chat_summarizer.py  codex_app_server.py  codex_state.py  config.py  deepseek_client.py  diagnostic_service.py  diagnostic_store.py  diagnostics.py  errors.py  hook_history.py  hook_installer.py  hook_store.py  kb_history.py  lock_planner.py  logging_utils.py  models.py  operation_service.py  operation_store.py  pending_interactions.py  prompt_dedup.py  protocol.py  review_service.py  runtime_service.py  search.py  search_store.py  server.py  status_assembler.py  statuses.py  storage.py  storage_schema.py  thread_lifecycle_service.py  thread_resolver.py  (+9 more)
openclaw_codex_mcp/hooks/: __init__.py  codex_sqlite_journal.py
scripts/: external_mcp_client.py  external_mcp_client_daemon.py  external_mcp_common.py  mcp_live_smoke.py
tests/: helpers.py  test_catalog.py  test_chat_reading.py  test_chat_summarizer.py  test_codex_app_server.py  test_diagnostics.py  test_hooks.py  test_live_findings_regression.py  test_mcp_server.py  test_operations.py  test_protocol.py  test_review_workflow.py  test_runtime_capabilities.py  test_storage.py  test_thread_lifecycle.py  test_transcripts.py  test_worker_architecture.py  test_workflows.py
